# NotificationCenter

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh  run.sh  test.sh  x.sh
NotificationCenter/: CMakeLists.txt  blur.cpp  converter.h  database.cpp  database.h  database_p.h  dbmanager.cpp  dbmanager.h  dbmanager_p.h  debug.h  extensioninterface.cpp  extensioninterface.h  extensionmanager.cpp  extensionmanager.h  extensionsmanager.cpp  extensionsmanager.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagemanager.cpp  messagemanager.h  ncdatabase.cpp  ncdatabase.h  ncdatabase_p.h  ncdebug.h  ncglobal.h  nclogging.h  ncmessage.cpp  ncmessage.h  ncmessage_p.h  notification.cpp  notification.h  notification_p.h  notificationcenter.cpp  notificationcenter.h  notificationcenter_p.h  notificationchannel.cpp  notificationchannel.h  (+15 more)
NotificationCenter/widgets/: backgroundwidget.cpp  backgroundwidget.h  datetimewidget.cpp  datetimewidget.h  ncnotificationbasewidget.cpp  ncnotificationbasewidget.h  ncnotificationwidget.cpp  ncnotificationwidget.h  ncnotifierwidget.cpp  ncpluginwidget.cpp  ncpluginwidget.h  ncwidget.cpp  ncwidget.h  notificationwidget.cpp  notificationwidget.h  notifier.cpp  notifier.h  pluginwidget.cpp  pluginwidget.h  widget.cpp  widget.h
NotificationCenter/widgets/old/: ncnotificationbasewidget.cpp  ncnotificationbasewidget.h  ncnotificationwidget.cpp  ncnotificationwidget.h  ncnotifierwidget.h
docs/: auth.md  notification.md
modules/: CMakeLists.txt
modules/python3/: CMakeLists.txt  configure.py  extensioninterface.sip  ncmessage.sip  notification.sip  notificationcenter.sip  plugininterface.sip  prepare.sh  python.cpp  python.h  python.json
plugins/: CMakeLists.txt
plugins/colortester/: CMakeLists.txt  colortester.cpp  colortester.h  colortester.ui  ctwidget.cpp  ctwidget.h  ui_colortester.h
plugins/python/: CMakeLists.txt
plugins/python/testplugin/: plugin.py
plugins/python/todo/: plugin.py
plugins/testplugin/: CMakeLists.txt  test.json  testplugin.cpp  testplugin.h
test/: CMakeLists.txt
test/NotificationCenter/: CMakeLists.txt  test_database.cpp  test_dbmanager.cpp  test_extensioninterface.cpp  test_extensioninterface.h  test_extensionmanager.cpp  test_extensionsmanager.cpp  test_mainwindow.cpp  test_messagemanager.cpp  test_ncdatabase.cpp  test_ncmessage.cpp  test_ncwidget.cpp  test_notification.cpp  test_notificationcenter.cpp  test_notificationmanager.cpp  test_plugininterface.cpp  test_plugininterface.h  test_pluginmanager.cpp  tset_plugininterface.h
tests/NotificationCenter/: test_database.cpp  test_main.cpp  test_mainwindow.cpp  test_notification.cpp  test_notificationcenter.cpp  test_notificationmanager.cpp  test_translator.cpp  test_widget.cpp
themes/: CMakeLists.txt  dark.qss  dark2.qss  light.qss
third_libraries/Catch2/: catch.hpp
translations/: NotificationCenter_zh_CN.ts  NotificationCenter_zh_TW.ts
